--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,12 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.2",
         "laravel/helpers": "^1.5",
-        "laravel/sanctum": "^2.14.1",
+        "laravel/sanctum": "^2.15",
+        "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.7"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.6",
         "barryvdh/laravel-ide-helper": "^2.12",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
